# LeadGen

./: .env.example  .gitignore  DEPLOY.md  README.md  app.py  pyproject.toml  requirements.txt  start_app.command
.streamlit/: config.toml  secrets.toml.example
docs/: ARCHITECTURE.md
src/lead_intel/: __init__.py
src/lead_intel/ai/: __init__.py  anthropic_client.py  assets.py  base.py  context.py  factory.py  prompts.py  service.py  templates.py
src/lead_intel/audit/: __init__.py  base.py  engine.py  features.py  fetcher.py  heuristics.py
src/lead_intel/config/: __init__.py  settings.py
src/lead_intel/core/: __init__.py  exceptions.py  logging.py
src/lead_intel/domain/: __init__.py  enums.py
src/lead_intel/domain/models/: __init__.py  ai_content.py  business.py  lead.py  scoring.py  website_audit.py
src/lead_intel/exporters/: __init__.py  analytics.py  data_exporter.py  excel_exporter.py  excel_styles.py  export_service.py  pdf_exporter.py  proposal_exporter.py  rows.py  screenshot.py
src/lead_intel/mockup/: __init__.py  builder.py
src/lead_intel/providers/: __init__.py  apify_gmaps.py  base.py  factory.py  google_places.py  http.py
src/lead_intel/services/: __init__.py  lead_scorer.py  pipeline.py  recommender.py  scoring_service.py  website_scorer.py
src/lead_intel/ui/: __init__.py  app.py  demo.py  downloads.py  formatting.py
tests/: conftest.py
tests/ai/: test_content.py
tests/audit/: test_engine.py  test_features_and_heuristics.py  test_fetcher.py
tests/config/: test_settings.py
tests/domain/: test_audit_and_lead.py  test_business.py
tests/exporters/: conftest.py  test_analytics_and_rows.py  test_exporters.py  test_proposal_and_screenshot.py
tests/mockup/: test_mockup.py
tests/providers/: test_apify_gmaps.py  test_factory.py  test_google_places.py
tests/services/: test_pipeline.py  test_scoring.py
tests/ui/: test_ui_helpers.py
