[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-intel"
version = "0.1.0"
description = "AI Lead Intelligence & Website Audit Platform for website design agencies"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Lead Intel" }]
keywords = ["lead-generation", "website-audit", "crm", "sales-intelligence"]

dependencies = [
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "python-dotenv>=1.0",
    # HTTP client for data providers (Phase 2+) and the website audit engine.
    "httpx>=0.26",
    # HTML parsing for the website audit feature detector (stdlib html.parser).
    "beautifulsoup4>=4.12",
    # Lets Pydantic evaluate PEP 604 (`X | None`) annotations at runtime on
    # Python 3.9/3.10. Drop once the minimum runtime is >= 3.11.
    "eval-type-backport>=0.2; python_version < '3.11'",
]

[project.optional-dependencies]
# Exporters, UI, and AI are wired in later phases. Kept as extras so the
# domain/config/provider core installs with a minimal footprint.
audit = ["lxml>=5.0"]  # optional faster parser; html.parser is used by default
ai = ["anthropic>=0.40"]  # optional; template generator works without it
export = ["openpyxl>=3.1", "reportlab>=4.0"]
ui = ["streamlit>=1.31", "pandas>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
mypy_path = "src"

# 'anthropic' is an optional extra (ships no type stubs); ignore when absent.
[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true
